# scraper_code_of_points

./: .gitignore  CoP_MAG_2017-2020_ICI-e.xml  README.md  pyproject.toml  requirements.txt  scrape.py  test_scrape.py
.devcontainer/: Dockerfile  devcontainer.json
test/: test_scrape.py
