[tool.poetry]
name = "scraper_code_of_points"
version = "0.1.0"
description = ""
authors = ["lukewiwa <luke.wiwa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^5.3.5"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
